--- a/resources/scss/components/_banner.scss
+++ b/resources/scss/components/_banner.scss
@@ -52,7 +52,7 @@ $paddingBanner: 150px;
             h2 {
                 margin: 20px 0 30px;
                 line-height: 1;
-                color: $text;
+                color: $title;
                 font-size: 30px;
 
                 @include tablet {
