--- a/resources/scss/components/_footer.scss
+++ b/resources/scss/components/_footer.scss
@@ -1,15 +1,9 @@
 .footer {
-    background-color: $text;
-    background: linear-gradient(rgba(0, 0, 0, .6),
-            rgba(0, 0, 0, .6)),
-        url('../storage/footer-bg.jpeg');
-    background-repeat: no-repeat;
-    background-position: left;
-    background-size: cover;
+    background-color: $primary;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    height: 330px;
+    height: 380px;
 
     @include mobile-only {
         height: auto;
@@ -18,7 +12,7 @@
 
     &-container {
         @include container;
-        color: white;
+        color: $title;
         flex: 1;
         display: flex;
         align-items: center;
@@ -74,7 +68,7 @@
 
                     li {
                         a {
-                            color: white;
+                            color: $text;
                         }
                     }
                 }
@@ -122,7 +116,7 @@
 
 
     &-copy {
-        background: $primary;
+        background: darken($color: $primary, $amount: 10%);
 
         &-container {
             @include container;
@@ -141,7 +135,7 @@
 
             p {
                 margin: 0;
-                color: $bg;
+                color: $title;
                 font-size: 0.8em;
             }
 
@@ -153,7 +147,7 @@
 
                 li {
                     a {
-                        color: $bg;
+                        color: $title;
                     }
                 }
             }
