--- a/resources/scss/components/_parceiros.scss
+++ b/resources/scss/components/_parceiros.scss
@@ -1,12 +1,12 @@
 .parceiros {
     @include container;
-    padding-top: 40px !important;
-    padding-bottom: 40px !important;
+    padding-top: 80px !important;
+    padding-bottom: 80px !important;
     text-align: center;
 
     h2 {
         margin: 0 0 20px;
-        color: $text;
+        color: $title;
         font-size: 2em;
     }
 
@@ -14,7 +14,7 @@
         .swiper {
             &-slide {
                 img {
-                    height: 45px;
+                    height: 80px;
                     width: 150px;
                     object-fit: cover;
                     transition: all .4s ease-in-out;
