--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -81,7 +81,7 @@ body {
 
             h2 {
                 font-size: 3.5em;
-                color: white;
+                color: $title;
                 z-index: 2;
                 margin: 0;
                 line-height: 1;
@@ -201,6 +201,14 @@ body {
     &-container {
         width: 100%;
         height: 100%;
+    }
+
+    &-button {
+
+        &-next,
+        &-prev {
+            color: $primary;
+        }
     }
 
     &-slide {
